src/test/testFiles/invalid/semanticErrors/pushWithTwoArgs.manimdsl
let x = Stack<number>();
x.push(1, 2);